generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

model User {
  id                   String        @id @default(cuid())
  name                 String?
  email                String        @unique
  emailVerified        DateTime?
  image                String?
  password             String?
  createdAt            DateTime      @default(now())
  updatedAt            DateTime      @updatedAt
  // Stripe subscription fields
  stripeCustomerId     String?       @unique
  stripeSubscriptionId String?       @unique
  subscriptionStatus   String?       @default("free") // free, active, past_due, canceled, trialing
  plan                 String        @default("free") // free, pro
  accounts             Account[]
  appointments         Appointment[]
  clients              Client[]
  pets                 Pet[]
  services             Service[]
  sessions             Session[]
  settings             Settings?

  @@map("users")
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String?
  access_token      String?
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String?
  session_state     String?
  user              User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
  @@map("accounts")
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("sessions")
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
  @@map("verification_tokens")
}

model Client {
  id        String   @id @default(cuid())
  firstName String
  lastName  String
  email     String?
  phone     String?
  userId    String
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  pets      Pet[]

  @@map("clients")
}

model Pet {
  id           String        @id @default(cuid())
  name         String
  breed        String?
  species      String
  age          Int?
  notes        String?
  clientId     String
  userId       String
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  appointments Appointment[]
  client       Client        @relation(fields: [clientId], references: [id], onDelete: Cascade)
  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("pets")
}

model Appointment {
  id        String   @id @default(cuid())
  petId     String
  userId    String
  date      DateTime
  duration  Int      @default(60)
  service   String?
  notes     String?
  status    String   @default("scheduled")
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  pet       Pet      @relation(fields: [petId], references: [id], onDelete: Cascade)
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("appointments")
}

model Settings {
  id              String   @id @default(cuid())
  userId          String   @unique
  businessName    String   @default("")
  businessEmail   String   @default("")
  businessPhone   String   @default("")
  defaultDuration Int      @default(60)
  openTime        String   @default("09:00")
  closeTime       String   @default("17:00")
  daysOpen        String   @default("1,2,3,4,5")
  createdAt       DateTime @default(now())
  updatedAt       DateTime @updatedAt
  user            User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("settings")
}

model Service {
  id          String   @id @default(cuid())
  name        String
  duration    Int      @default(60)
  price       Float?
  description String?
  isActive    Boolean  @default(true)
  sortOrder   Int      @default(0)
  userId      String
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  user        User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("services")
}
